# fantasy

./: .env.example  .gitignore  AGENTS.md  LIVE_PROJECTIONS_IMPLEMENTATION.md  README.md  package.json  pyproject.toml
apps/web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: app-nav.tsx  live-activity-feed.tsx  owner-avatars.tsx  power-rankings.tsx  probability-chart.tsx  refresh-controls.tsx  scenario-drawer.tsx  scenario-switcher.tsx  team-timeline.tsx  week-cell.tsx
apps/web/src/lib/: data.ts  formatters.ts  league-host.ts  paths.ts  scenario-constants.ts  scenario-data.ts  scenario-utils.ts  simulator-data.ts  team-metrics.ts
apps/web/src/server/: diff-service.ts  matchup-service.ts  (+3 more)
config/: env.example  refresh-config.json  refresh-config.sample.json  refresh-overrides.sample.json  scoring.yaml
data/overlays/2025/: cli-demo.json  demo-upset.json
docs/: frontend-ux-data-contract.md  ideas.md
scripts/: power-rankings.js  refresh-scheduler.js  show-latest-diff.js
src/fantasy_nfl/: __init__.py  auth.py  cli.py  espn.py  espn_nfl.py  fantasycalc.py  merge.py  nflverse.py  normalize.py  overlays.py  pbp.py  projection_baseline.py  projection_providers.py  projections.py  scoring.py  settings.py  simulator.py
tests/: test_cli_scenario.py  test_espn_nfl.py  test_fantasycalc.py  test_normalize_transactions.py  test_projection_baseline.py  test_projection_providers.py  test_projections_manager.py  test_simulator.py
(+32 files in other folders)
